<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharpCart</string>
    <string name="search_hint">Search grocery items</string>
    <string name="action_main_sharp_list">Sharp List</string>
    <string name="splashScreenImageContentDescriptor">splash loading image</string>
    <string name="companyName">www.shaprcart.com</string>
    <string name="action_search">Search</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="zipCode">ZIP Code</string>
    <string name="add">Update</string>
    <string name="cancel">Cancel</string>
    <string name="price_hint">Change Price</string>
    <string name="quantity_hint">Change Quantity</string>
    <string name="choose_store">Choose Store</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sharp_list_name">Sharp List Name</string>
    
    <!-- Menu Items -->
    <string name="settings">Settings</string>
    <string name="refresh">Sync</string>
    <string name="logout">Logout</string>
    <string name="chooseGroceryStoreMap">Choose Store</string>
    
    <!-- Dialogs -->
    <string name="email_sharp_list_dialog_title">Email Sharp List</string>
    <string name="sync_sharp_list_dialog_message">There is a newer list on the server. Do you want to get it?</string>
    <string name="sync_sharp_list_dialog_title">Newer list on server</string>
        
    <!-- Preferences -->
    <string name="pref_user_profile_title">User Profile</string>
    <string name="pref_about_app_settings_title">About</string>
    
    <string name="pref_app_version">Version</string>
    <string name="pref_app_version_value">1.6.4-beta</string>
        
    <string name="pref_stores">Selected Stores</string>

    <string-array name="pref_stores_entries">
        <item>Costco</item>
        <item>HEB</item>
        <item>Sprouts</item>
        <item>Sams Club</item>
        <item>Walmart</item>
    </string-array>
    <string-array name="pref_stores_values">
        <item>3</item>
        <item>1</item>
        <item>4</item>
        <item>5</item>
        <item>2</item>
    </string-array>
    <string-array name="pref_stores_default_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="pref_zip">ZIP Code</string>

    <string-array name="pref_zip_entries">
        <item>78613</item>
        <item>78664</item>
        <item>78681</item>
        <item>78717</item>
        <item>78727</item>
        <item>78729</item>
    </string-array>
    <string-array name="pref_zip_values">
        <item>78613</item>
        <item>78664</item>
        <item>78681</item>
        <item>78717</item>
        <item>78727</item>
        <item>78729</item>
    </string-array>
    <string-array name="pref_zip_default_values">
        <item>78681</item>
    </string-array>

    <string name="pref_family_size">Family Size</string>

    <string-array name="pref_family_size_entries">
        <item>Single</item>
        <item>Couple</item>
        <item>Four or less</item>
        <item>Five or more</item>
    </string-array>
    <string-array name="pref_family_size_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="pref_family_size_default_values">
        <item>3</item>
    </string-array>

    <!-- Wizard String -->
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Login</string>
    <string name="review">Review</string>
    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Mandatory</string>
    <string name="submit_confirm_message">Login.</string>
    <string name="submit_confirm_button">Login</string>

    <!-- application navigation -->
    <string-array name="application_navigation_array">
        <item>Store Mode</item>
        <item>On Sale</item>
    </string-array>

    <string name="choose">Choose</string>
    <string name="total_cost">Total Cost</string>
    <string name="in_cart">In Cart</string>
	
    <!-- ShowCaseView  -->
    <string name="showcase_optimization_title">Optimize</string>
    <string name="showcase_optimization_message">Press to find the best store to buy your list</string>
    <string name="showcase_email_title">Email</string>
    <string name="showcase_email_message">Press to Email your list</string>
    <string name="showcase_in_store_title">In Store Mode</string>
    <string name="showcase_in_store_message">Press to track your list while at the store</string>
    
</resources>