<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/settings"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/settings"/>
        <item
        android:id="@+id/chooseGroceryStoreMap"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/chooseGroceryStoreMap"/>
    <item
        android:id="@+id/refresh"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/logout"/>
    
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />
</menu>