<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer" >

    <TextView style="@style/WizardPageTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/email" />

            <EditText
                android:id="@+id/your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textEmailAddress"
                android:saveEnabled="false" />

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/password" />

            <EditText
                android:id="@+id/your_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:inputType="textPassword"
                android:saveEnabled="false" />

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/zipCode" />

            <EditText
                android:id="@+id/your_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:maxEms="5"
                android:maxLength="5"
                android:saveEnabled="false" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>